force-app/main/default/objects/Fundraising_Campaign_Detao_s__c/Fundraising_Campaign_Detao_s__c.object-meta.xml
<CustomObject>
    <label>Fundraising Campaign History</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Fundraising Campaign Detao;s Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundraising Campaign History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>