force-app/main/default/objects/Fundraising_Campaign_Detao_s__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Fundraising Campaign History</relationshipLabel>
    <relationshipName>Fundraising_Campaign_History</relationshipName>
    <type>Lookup</type>
</CustomField>