force-app/main/default/objects/Fundraising_Campaign_Detao_s__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fundraising Campaign History</relationshipLabel>
    <relationshipName>Fundraising_Campaign_History</relationshipName>
    <type>Lookup</type>
</CustomField>