force-app/main/default/objects/Fundraising_Campaign_Detao_s__c/fields/Is_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Is_Fundraiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fundraiser</label>
    <type>Checkbox</type>
</CustomField>